server/module: vertx support #3778
- documentation
- bug fixing and API improvements